board started and square improved

--- a/src/Square/Square.module.css
+++ b/src/Square/Square.module.css
@@ -24,6 +24,10 @@
     color: white;
   }
 
+  .plain {
+      background-color: rgb(195, 190, 161);
+  }
+
   .full-height-width {
       width: 100%;
       height: 100%;
