--- a/src/Square/Square.module.css
+++ b/src/Square/Square.module.css
@@ -1,7 +1,5 @@
 .TW {
-    padding: 0;
     background-color: #ff6b33;
-    
   }
   
   .DL {
@@ -18,6 +16,7 @@
   
   .S{
     background-color: red;
+    color: white;
   }
 
   .star{
@@ -31,5 +30,8 @@
   .full-height-width {
       width: 100%;
       height: 100%;
-      text-align: center;
+      border: 1px solid white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
   }
