--- a/src/Tile/Tile.module.css
+++ b/src/Tile/Tile.module.css
@@ -4,16 +4,39 @@
     margin-left: auto;
     margin-right: auto;
     background-color: rgb(252, 252, 191);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
 }
 
 .letter {
     font-weight: bold;
     text-align: center;
     font-size: 1em;
+    flex: 1;
 }
 
 .points {
+    margin: 0;
     font-weight: bold;
-    text-align: end;
+    /* text-align: end; */
     font-size: 0.6em;
+    align-self: flex-end;
 }
+
+.Aligner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .Aligner-item {
+    max-width: 50%;
+  }
+  
+
+  
+  .Aligner-item--bottom {
+    align-self: flex-end;
+  }
