--- a/src/Tile/Tile.module.css
+++ b/src/Tile/Tile.module.css
@@ -8,6 +8,8 @@
     align-items: center;
     justify-content: center;
     border-radius: 5px;
+    z-index: 10;
+    position: absolute;
 }
 
 .letter {
