--- a/src/Tile/Tile.module.css
+++ b/src/Tile/Tile.module.css
@@ -10,6 +10,7 @@
     border-radius: 5px;
     z-index: 10;
     position: absolute;
+    user-select: none;
 }
 
 .letter {
@@ -18,6 +19,7 @@
     font-size: 1.3em;
     flex: 1;
     color: black !important;
+    user-select: none;
 }
 
 .points {
@@ -27,6 +29,7 @@
     font-size: 0.7em;
     align-self: flex-end;
     color: black !important;
+    user-select: none;
 }
 
 .Aligner {
