--- a/src/Rack/Rack.module.css
+++ b/src/Rack/Rack.module.css
@@ -16,11 +16,10 @@
 }
 
 .wrappingRack {
-    width: 330px;
-    height: 40px;
+    width: 400px;
     display: flex;
     flex-wrap: wrap;
-    margin-top: 20px;
+    margin-top: 2%;
     margin-left: auto;
     margin-right: auto;
 }
