--- a/src/board/board.module.css
+++ b/src/board/board.module.css
@@ -4,8 +4,8 @@
 }
 
 .wrappingBoard {
-    width: 600px;
-    height: 600px;
+    /* width: 600px; */
+    /* height: 600px; */
     display: flex;
     flex-wrap: wrap;
     margin-left: auto;
