--- a/src/ScoreKeeper/ScoreKeeper.module.css
+++ b/src/ScoreKeeper/ScoreKeeper.module.css
@@ -9,6 +9,19 @@
       align-items: center; */
 }
 
-.points{
+.bold{
     font-weight: bold;
 }
+
+
+
+  .mytable {
+    border: 2px solid blue;
+    width:80%;
+    margin-left:auto;
+    margin-right: auto;
+  }
+
+  .mytable td, th {
+    border: 2px solid blue;
+  }
