--- a/src/Rack/Rack.module.css
+++ b/src/Rack/Rack.module.css
@@ -22,3 +22,29 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+.aspectratio {
+    width: 80%;
+    height: 0;
+    padding-bottom: 10%;
+    position: relative;
+  }
+  
+  .innerwrapper {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  }
+
+  
+  @media only screen and (max-width: 992px) {
+
+    .aspectratio {
+        width:100%;
+        padding-bottom: 10%;
+    }
+
+
+  }
