--- a/src/Tile/Tile.module.css
+++ b/src/Tile/Tile.module.css
@@ -48,6 +48,26 @@
     align-self: flex-end;
   }
 
+  .submitted {
+    animation-name: animate;
+    animation-duration: .3s;
+    animation-iteration-count: 2;
+    animation-direction: alternate;
+  }
+
+  
+  
+  @keyframes animate
+  {     
+          from {
+          transform: scale(1);
+          }
+
+          to {
+            transform: scale(1.2); 
+          }
+  }
+
 
   @media only screen and (max-width: 992px) {
 
