--- a/src/AIThinkingModal/AIThinkingModal.module.css
+++ b/src/AIThinkingModal/AIThinkingModal.module.css
@@ -2,19 +2,24 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    background-color: turquoise;
 }
 
 .spinner{
     width: 100%;
+    background-color: cornflowerblue;
 }
 
 .spinnertext{
     /* width: 100%;
     font-size: 2em;
     color: blue; */
-    border: 2px solid #888;
+    /* border: 2px solid #888;
     padding: 5px;
     border-radius: 10px;
-    background-color: #FF00FF;
+    background-color: #FF00FF; */
+    text-align: center;
     width: 100%;
 }
+
+
