--- a/src/BoardAndRack.module.css
+++ b/src/BoardAndRack.module.css
@@ -3,3 +3,10 @@
 flex-direction: column;
 align-items: center;
 }
+
+.noscroll{
+    height: 100%;
+    overflow: hidden;
+    width: 100%;
+    position: fixed;
+}
