--- a/src/BoardAndRack.module.css
+++ b/src/BoardAndRack.module.css
@@ -7,6 +7,6 @@ align-items: center;
 .noscroll{
     height: 100%;
     overflow: hidden;
-    width: 100%;
-    position: fixed;
+    /* width: 100%;
+    position: fixed; */
 }
