--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,18 @@
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 html {
-  font-family: sans-serif;
+    font-family: sans-serif;
+    overflow: hidden;
 }
 
 body {
-  margin: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    overflow-y: auto;
+    overflow-x: hidden;
+    /* -webkit-overflow-scrolling: touch; */
 }
