--- a/src/ControlButtons/ControlButtons.module.css
+++ b/src/ControlButtons/ControlButtons.module.css
@@ -9,22 +9,33 @@
   width:50%
 }
 
+.shorttext{
+  display: none;
+}
+
+.longtext{
+  display: inline-block;
+}
+
 
 @media only screen and (max-width: 992px) {
 
     .horz-btns{
         flex-direction: row !important;
-        justify-content: space-around !important;
-      }
-  
-    .smallscreen{
-        /* padding-left: 0 !important; */
-        font-size: 0.8em;
-        /* color: lightseagreen; */
+        justify-content: space-between !important;
       }
 
     .stretch{
       width:auto;
+    }
+
+    .shorttext{
+      font-size: 0.9em;
+      display: inline-block;
+    }
+
+    .longtext{
+      display: none;
     }
 
   
