score table added to passdevicemodal

--- a/src/PassDeviceMessageModal/PassDevice.module.css
+++ b/src/PassDeviceMessageModal/PassDevice.module.css
@@ -11,3 +11,12 @@
 .centerMid {
     text-align: center;
 }
+
+.tdstyle {
+    font-weight: bold;
+    color:hotpink;
+}
+
+.mytable {
+    background: lightgreen;
+}
